<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Advanced"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:onClick="setAdvancedCalc"
        android:text="@string/advanced"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Simple" />

    <Button
        android:id="@+id/About"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:onClick="setAbout"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Advanced" />

    <Button
        android:id="@+id/Exit"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:onClick="setExit"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/About"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Simple"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:onClick="setSimpleCalc"
        android:text="@string/simple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginTop="200dp"
        android:text="@string/calculator"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>